Se agrega icono favicon.png..

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <link rel="stylesheet" href="estilo.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-compatible" content="IE=edge">
-  <!--meta name="viexport" content="width=device-width,initial-scale=1.0"-->
-  <title>Primer Porfolio</title>
-  <!--link rel="stylesheet" href="style.css"-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> <!--iconos-->
+  <title>Francisco-Garone</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -83,6 +83,7 @@
 
   <!-- Redes -->
 <section id="redes">
+  <div></div>
   <h2>Redes</h2>
   <a href="https://github.com/Garone45" target="_blank" class="boton-rojo github">
     <i class="fa-brands fa-github"></i>
@@ -93,6 +94,7 @@
   <a href="https://www.linkedin.com/in/tu_usuario/" target="_blank" class="boton-rojo linkedin">
     <i class="fa-brands fa-linkedin"></i>
   </a>
+</div>
 </section>
 
   <!-- Contacto -->
